Fix z-index on chart helper message

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -504,7 +504,7 @@ button.create-your-own {
   padding: 12px;
   .font-size(16);
   position: absolute;
-  z-index: 1100;
+  z-index: 1020;
   background: #f5f5f5;
   .border-radius(6px);
 }
